--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "@idevless/nuxt-oauth",
+  "name": "@idevless/nuxt-auth",
   "version": "1.0.1",
   "description": "Nuxt OAuth",
-  "repository": "https://github.com/idevless/nuxt-oauth",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/idevless/nuxt-oauth.git"
+  },
   "author": "idevless",
   "keywords": [
     "nuxt",
@@ -18,6 +21,9 @@
   },
   "license": "MIT",
   "type": "module",
+  "publishConfig": {
+    "access": "public"
+  },
   "exports": {
     ".": {
       "types": "./dist/types.d.mts",
@@ -36,7 +42,6 @@
     "dist"
   ],
   "scripts": {
-    "prepack": "NODE_OPTIONS='--max-old-space-size=4096' nuxt-module-build build",
     "dev": "npm run dev:prepare && nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
@@ -48,8 +53,7 @@
   },
   "dependencies": {
     "@nuxt/kit": "^4.1.1",
-    "camelcase": "^8.0.0",
-    "zod": "^4.1.8"
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@nuxt/devtools": "^2.6.3",
