--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "idevless/nuxt-auth",
+  "name": "@idevless/nuxt-auth",
   "version": "1.0.2",
   "description": "Nuxt OAuth",
   "repository": {
