--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idevless/nuxt-oauth",
-  "version": "1.0.13",
+  "version": "1.0.14",
   "description": "Nuxt OAuth",
   "repository": {
     "type": "git",
@@ -50,7 +50,7 @@
     "dev": "npm run dev:prepare && nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "changelogen --release && npm publish && git push --follow-tags",
+    "release": "nuxt-module-build build && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
     "test": "vitest run",
     "test:watch": "vitest watch",
@@ -58,6 +58,8 @@
   },
   "dependencies": {
     "@nuxt/kit": "^4.1.1",
+    "defu": "^6.1.4",
+    "undici": "^7.16.0",
     "zod": "^4.1.9"
   },
   "devDependencies": {
@@ -66,7 +68,6 @@
     "@nuxt/module-builder": "^1.0.2",
     "@nuxt/schema": "^4.1.1",
     "@nuxt/test-utils": "^3.19.2",
-    "@nuxt/ui": "^4.0.0-alpha.1",
     "@types/node": "latest",
     "changelogen": "^0.6.2",
     "eslint": "^9.35.0",
