--- a/playground/package.json
+++ b/playground/package.json
@@ -8,6 +8,9 @@
     "generate": "nuxi generate"
   },
   "dependencies": {
-    "nuxt": "^4.1.1"
+    "@nuxt/ui": "4.0.0-alpha.2",
+    "nuxt": "^4.1.1",
+    "typescript": "^5.6.3",
+    "undici": "^7.16.0"
   }
 }
